test/seq/cmdlists/no_newline_invalid_start.err
SyntaxError: Expecting command name
Line: 2, Column: 1
123123 = 234
^
